# RankedRetrieval

./: Config.py  main.py  pyproject.toml
src/: Index.py  tokenizer.py
src/Cosine/: Cosine.py  test.py
src/Jaccard/: Jaccard.py
src/TermFrecuency/: TermFrecuency.py
